ch09/ch09-start/iac-macro-usage/tests/fails/lambda_fake_property.stderr
error: unknown property passed to lambda
 --> tests/fails/lambda_fake_property.rs:5:26
  |
5 |       lambda name mem 10 fake 15
  |                          ^^^^
